# mechanics_simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fragment_shader.glsl  imgui.ini  main.cpp  single_colour_shader.glsl  vertex_shader.glsl
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: CMakeLists.txt  environment.cpp  environment.hpp  gui.cpp  gui.hpp  object.cpp  object.hpp  shader.cpp  shader.hpp  simulation.cpp  simulation.hpp  sphere.cpp  sphere.hpp  tree.cpp  tree.hpp  utils.h  window.cpp  window.hpp
